Did some mining off camera...
 - Created the templates for the three supported languages
 - Added logo
 - Templates feature audio player (with autoplay functionality)
 - Created JavaScript function to change title if user switches tabs
 - Added marquee for more interactivity

Page works just fine locally, need to deploy it and test functionality online.

--- a/ru.html
+++ b/ru.html
@@ -21,8 +21,8 @@
 
             <div class="content">
                 <p class="welcome">
-                    <i>Welcome to ZiemelRietumu Radio</i>, your home for the
-                    best blues, metal, and rock music.
+                    <i>Добро пожаловать на радио ZiemelRietumu</i>, ваш дом для
+                    лучшей блюзовой, метал и рок музыки.
                 </p>
                 <img
                     src="/static/images/logo.png"
@@ -30,8 +30,8 @@
                     width="125px"
                 /><br /><br />
                 <marquee class="scrolling-text"
-                    >Now playing: Classic Blues, Heavy Metal, 80s Rock,
-                    Alternative, Progressive Rock, and more...</marquee
+                    >Сейчас в эфире: Классический блюз, Хэви Метал, Рок 80-х,
+                    Альтернатива, Прогрессивный рок и многое другое...</marquee
                 >
                 <div class="audio-player">
                     <audio controls autoplay>
@@ -39,11 +39,11 @@
                             src="http://89.221.119.103:8000/stream"
                             type="audio/mpeg"
                         />
-                        Your browser does not support the audio element.
+                        Ваш браузер не поддерживает элемент audio
                     </audio>
                 </div>
                 <p class="contact">
-                    For requests, contact us at:
+                    Для запросов свяжитесь с нами по адресу:
                     <a href="mailto:dj@ZiemelRietumu.live"
                         >dj@ZiemelRietumu.live</a
                     >
